src/NKnife.TDMS/Externals/nilibddc.h

typedef DDCFile* DDCFileHandle;
typedef enum
{
    DDC_UInt8 = 5, // unsigned char
    DDC_Int16 = 2, // short
    DDC_Int32 = 3, // int
    DDC_Float = 9, // float
    DDC_Double = 10, // double
    DDC_String = 23, // string
    DDC_Timestamp = 30, // timestamp (Year/Month/Day/Hour/Minute/Second/Millisecond components)
} DDCDataType;
//*****************************************************************************
/// <- Data Retrieval
//*****************************************************************************

//*****************************************************************************
/// -> Properties
//*****************************************************************************

//*****************************************************************************
/// -> File
//*****************************************************************************
int __cdecl DDC_SetFileProperty(DDCFileHandle file,
                                const char* property,
                                ...);
int __stdcall DDC_SetFilePropertyTimestampComponents(DDCFileHandle file,
                                                     const char* property,
                                                     unsigned int year,
                                                     unsigned int month,
                                                     unsigned int day,
                                                     unsigned int hour,
                                                     unsigned int minute,
                                                     unsigned int second,
                                                     double milliSecond);
int __stdcall DDC_SetFilePropertyV(DDCFileHandle file,
                                   const char* property,
                                   va_list args);
int __stdcall DDC_GetFileProperty(DDCFileHandle file,
                                  const char* property,
                                  void* value,
                                  size_t valueSizeInBytes);
int __stdcall DDC_GetFilePropertyTimestampComponents(DDCFileHandle file,
                                                     const char* property,
                                                     unsigned int* year,
                                                     unsigned int* month,
                                                     unsigned int* day,
                                                     unsigned int* hour,
                                                     unsigned int* minute,
                                                     unsigned int* second,
                                                     double* milliSecond,
                                                     unsigned int* weekDay);
int __stdcall DDC_GetFileStringPropertyLength(DDCFileHandle file,
                                              const char* property,
                                              unsigned int* length);
int __cdecl DDC_CreateFileProperty(DDCFileHandle file,
                                   const char* property,
                                   DDCDataType dataType,
                                   ...);
int __stdcall DDC_CreateFilePropertyTimestampComponents(DDCFileHandle file,
                                                        const char* property,
                                                        unsigned int year,
                                                        unsigned int month,
                                                        unsigned int day,
                                                        unsigned int hour,
                                                        unsigned int minute,
                                                        unsigned int second,
                                                        double milliSecond);
int __stdcall DDC_CreateFilePropertyV(DDCFileHandle file,
                                      const char* property,
                                      DDCDataType dataType,
                                      va_list args);
int __stdcall DDC_FilePropertyExists(DDCFileHandle file,
                                     const char* property,
                                     int* exists);
int __stdcall DDC_GetNumFileProperties(DDCFileHandle file,
                                       unsigned int* numProperties);
int __stdcall DDC_GetFilePropertyNames(DDCFileHandle file,
                                       char** propertyNames,
                                       size_t numPropertyNames);
int __stdcall DDC_GetFilePropertyType(DDCFileHandle file,
                                      const char* property,
                                      DDCDataType* dataType);